[package]
name = "tracing-ez"
version = "0.1.0"
edition = "2021"
description = "A simplified interface to tracing"
license = "MIT"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "tracing_ez"
path = "src/lib.rs"

[dependencies]
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
